--- a/src/css/style.css
+++ b/src/css/style.css
@@ -103,20 +103,20 @@ html{
     text-align: center;
 }
 
-/* Seccion del parque Arvi  */
+/* Seccion de los lugares ecologicos */
 
-.parqueArvi-container{
+
+/* Parque Arvi */
+.park-container{
     width: 100%;
-    height: 600px;
-    padding: 30px 20px;
-}
-
-.leftSection-park{
-    width: 35%;
-    height: 400px;
+    height: auto;
+    padding: 30px 25px;
+    display: flex;
 }
 
 .parkText-container{
+    width: 35%;
+    height: auto;
     text-align: center;
 }
 
@@ -127,4 +127,47 @@ html{
 
 .parkText-container p{
     margin-bottom: 10px;
+}
+
+.mapa{
+    width: 100%;
+    height: 400px;
+}
+
+.parkImg-container{
+    padding-left: 100px;
+    width: 65%;
+    height: auto;
+}
+
+.firstImg-container{
+    width: 100%;
+    height: 400px;
+    margin-bottom: 5px;
+}
+
+.firstImg{
+    width: 100%;
+    height: 400px;
+    border-radius: 8px;
+}
+
+.otherImg-container{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 8px;
+}
+.otherImg{
+    width: 550px;
+    height: 275px;
+    border-radius: 8px;
+}
+
+/* Jardin */
+
+.otherImg-jardin{
+    width: 550px;
+    height: 295px;
+    border-radius: 8px;
 }
